update | wordpress change values

--- a/.env_EXAMPLE
+++ b/.env_EXAMPLE
@@ -3,5 +3,10 @@ DB_JIRA_DB=jirabd
 DB_JIRA_USER=jirauser
 DB_JIRA_PASSWORD=sunway
 
+# WordPress
+DB_NAME_WORDPRESS=wordpress
+DB_PASSWORD_WORDPRESS=sunway
+
 # GENERAL
 DOMAIN=everis.local
+PROTOCOL=https
