--- a/wordpress/config/nginx.conf
+++ b/wordpress/config/nginx.conf
@@ -14,7 +14,7 @@ server {
         try_files $uri $uri/ /index.php$is_args$args;
         include              /etc/nginx/fastcgi_params;
         fastcgi_param        SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_pass         diario_php:9000;
+        fastcgi_pass         wordpress_php:9000;
         fastcgi_read_timeout 1000;
     }
 
